# infinite-isopod

./: .gitignore  README.rst  pyproject.toml
src/infipod/: engine.py  schema.py  types.py  util.py
tests/: conftest.py  test_custom_converters.py  test_engine.py
